--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1567,6 +1567,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: 0px;
 }
 
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1587,9 +1591,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 2rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
+}
+
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mr-8 {
@@ -1620,12 +1639,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
+.ml-auto {
+  margin-left: auto;
+}
+
 .mt-32 {
   margin-top: 8rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
 }
 
 .mb-2 {
@@ -1680,12 +1711,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 400px;
 }
 
+.h-96 {
+  height: 24rem;
+}
+
 .h-20 {
   height: 5rem;
 }
 
 .h-12 {
   height: 3rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .max-h-40 {
@@ -1750,6 +1793,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-12 {
   width: 3rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .min-w-\[310px\] {
@@ -1894,6 +1945,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-items: center;
 }
 
+.items-baseline {
+  align-items: baseline;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
@@ -2006,6 +2061,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-width: 1px;
 }
 
+.border-2 {
+  border-width: 2px;
+}
+
+.border-4 {
+  border-width: 4px;
+}
+
 .border-l-4 {
   border-left-width: 4px;
 }
@@ -2013,6 +2076,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-vsp-400 {
   --tw-border-opacity: 1;
   border-color: rgb(170 214 25 / var(--tw-border-opacity));
+}
+
+.border-orange-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(253 186 116 / var(--tw-border-opacity));
+}
+
+.border-orange-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(251 146 60 / var(--tw-border-opacity));
 }
 
 .border-l-vsp-500 {
@@ -2190,6 +2263,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   text-align: center;
 }
 
+.align-top {
+  vertical-align: top;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
 .font-headline {
   font-family: Poppins, Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif;
 }
@@ -2227,6 +2308,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-\[1rem\] {
+  font-size: 1rem;
 }
 
 .font-bold {
@@ -2282,6 +2367,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-vsp-900 {
   --tw-text-opacity: 1;
   color: rgb(80 100 12 / var(--tw-text-opacity));
+}
+
+.text-orange-400 {
+  --tw-text-opacity: 1;
+  color: rgb(251 146 60 / var(--tw-text-opacity));
+}
+
+.text-orange-600 {
+  --tw-text-opacity: 1;
+  color: rgb(234 88 12 / var(--tw-text-opacity));
+}
+
+.text-orange-500 {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.text-orange-800 {
+  --tw-text-opacity: 1;
+  color: rgb(154 52 18 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2486,6 +2591,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(194 233 68 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-orange-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 65 12 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-orange-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 186 116 / var(--tw-bg-opacity));
+}
+
 .hover\:text-vsp-500:hover {
   --tw-text-opacity: 1;
   color: rgb(156 195 23 / var(--tw-text-opacity));
@@ -2575,6 +2690,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .peer:checked ~ .peer-checked\:bg-slate-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-vsp-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(194 233 68 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-vsp-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(170 214 25 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-vsp-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 100 12 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-vsp-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(127 160 19 / var(--tw-bg-opacity));
 }
 
 .peer:checked ~ .peer-checked\:text-white {
@@ -3111,10 +3246,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-row-start: 1;
   }
 
-  .lg\:ml-auto {
-    margin-left: auto;
-  }
-
   .lg\:mr-4 {
     margin-right: 1rem;
   }
@@ -3211,10 +3342,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     background-color: transparent;
   }
 
-  .lg\:p-4 {
-    padding: 1rem;
-  }
-
   .lg\:py-1 {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
@@ -3236,10 +3363,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:pt-36 {
     padding-top: 9rem;
-  }
-
-  .lg\:pt-24 {
-    padding-top: 6rem;
   }
 
   .lg\:text-5xl {
